Fix scale canvas width to avoid scrollbars

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@ html, body {
 	display: none;
 }
 
-#ci-left > *, .ci-expand > *, .ci-module-header, .ci-module-header > *, .ci-module-content, .ci-module {
+table#ci-viewport, table#ci-viewport td, #ci-module-grid, #ci-left > *, .ci-expand > *, .ci-module-header, .ci-module-header > *, .ci-module-content, .ci-module, .ci-module-wrapper {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none; 
